fix: add yarn install

--- a/.github/workflows/automated-acceptance-tests.yml
+++ b/.github/workflows/automated-acceptance-tests.yml
@@ -38,6 +38,7 @@ jobs:
         run: |
           aws sts get-caller-identity
           yarn global add aws-cdk
+          yarn install
           yarn test
           yarn synth
           yarn publish-assets
