--- a/.github/workflows/automated-acceptance-tests.yml
+++ b/.github/workflows/automated-acceptance-tests.yml
@@ -92,7 +92,9 @@ jobs:
 
       - name: Wait for Superwerker Deployment
         run: |
+          # https://github.com/aws/aws-cli/issues/2887
           aws cloudformation wait stack-create-complete --stack-name superwerker
+          aws cloudformation wait stack-update-complete --stack-name superwerker
         shell: bash
       
   test:
