fix: set correct role for test execution

--- a/.github/workflows/automated-acceptance-tests.yml
+++ b/.github/workflows/automated-acceptance-tests.yml
@@ -110,7 +110,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-region: ${{ env.AWS_DEFAULT_REGION }}
-          role-to-assume: ${{ secrets.AWS_AAC_NS_ROLE }}
+          role-to-assume: ${{ secrets.AWS_AAC_ROLE }}
       
       - name: Run Acceptance Tests
         run: |
