--- a/cdk/package.json
+++ b/cdk/package.json
@@ -42,9 +42,11 @@
   },
   "dependencies": {
     "@aws-cdk/aws-lambda-python-alpha": "^2.66.1-alpha.0",
-    "@aws-sdk/client-cloudwatch": "^3.490.0",
-    "@aws-sdk/client-eventbridge": "^3.490.0",
-    "@aws-sdk/client-ssm": "^3.490.0",
+    "@aws-sdk/client-cloudwatch": "^3.0.0",
+    "@aws-sdk/client-eventbridge": "^3.0.0",
+    "@aws-sdk/client-ses": "^3.0.0",
+    "@aws-sdk/client-ssm": "^3.0.0",
+    "@aws-sdk/types": "^3.0.0",
     "@types/aws-lambda": "^8.10.109",
     "async-retry": "^1.3.3",
     "aws-cdk-lib": "^2.115.0",
