--- a/cdk/package.json
+++ b/cdk/package.json
@@ -16,9 +16,6 @@
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
-    "aws-cdk": "^2.96.2",
-    "aws-sdk-client-mock": "^3.0.0",
-    "aws-sdk-client-mock-jest": "^3.0.0",
     "esbuild": "^0.17.3",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^9.1.0",
@@ -47,11 +44,12 @@
     "@aws-sdk/client-cloudwatch": "^3.490.0",
     "@aws-sdk/client-eventbridge": "^3.490.0",
     "@aws-sdk/client-organizations": "^3.490.0",
+    "@aws-sdk/client-sns": "^3.490.0",
     "@aws-sdk/client-ssm": "^3.490.0",
     "@types/aws-lambda": "^8.10.109",
     "async-retry": "^1.3.3",
     "aws-cdk-lib": "^2.115.0",
-    "axios": "^1.2.3",
+    "axios": "^1.6.7",
     "cdk-assets": "^2.115.0",
     "constructs": "^10.1.224",
     "endent": "^2.1.0",
