chore: add pip to dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,7 @@ updates:
     directory: "cdk/"
     schedule:
       interval: "weekly"
+  - package-ecosystem: "pip"
+    directory: "cdk/"
+    schedule:
+      interval: "weekly"
