--- a/cdk/package.json
+++ b/cdk/package.json
@@ -45,11 +45,11 @@
   },
   "dependencies": {
     "@aws-cdk/aws-lambda-python-alpha": "^2.66.1-alpha.0",
-    "@aws-sdk/client-cloudwatch": "^3.490.0",
-    "@aws-sdk/client-eventbridge": "^3.490.0",
-    "@aws-sdk/client-organizations": "^3.490.0",
-    "@aws-sdk/client-sns": "^3.490.0",
-    "@aws-sdk/client-ssm": "^3.490.0",
+    "@aws-sdk/client-cloudwatch": "3.525.0",
+    "@aws-sdk/client-eventbridge": "3.525.0",
+    "@aws-sdk/client-organizations": "3.525.0",
+    "@aws-sdk/client-sns": "3.525.0",
+    "@aws-sdk/client-ssm": "3.525.0",
     "async-retry": "^1.3.3",
     "aws-cdk-lib": "^2.115.0",
     "axios": "^1.6.7",
