--- a/cdk/package.json
+++ b/cdk/package.json
@@ -1,39 +1,43 @@
 {
-  "name": "superwerker-cdk-poc",
+  "name": "superwerker-cdk",
+  "engines": {
+    "node": "^18 || ^20"
+  },
   "scripts": {
     "synth": "cdk synth --version-reporting false",
     "test": "make test && jest --silent",
     "publish-assets": "npx ts-node -P tsconfig.json --prefer-ts-exts src/scripts/publish-assets.ts",
-    "prepare": "cd .. && husky install cdk/.husky",
+    "prepare": "cd .. && husky cdk/.husky",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.4.2",
-    "@commitlint/config-conventional": "^17.4.2",
-    "@types/async-retry": "^1.4.5",
-    "@types/jest": "^29.2.6",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "esbuild": "^0.17.3",
-    "eslint": "^8.32.0",
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
+    "@types/async-retry": "^1.4.8",
+    "@types/aws-lambda": "^8.10.132",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.10",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "aws-sdk-client-mock": "^3.0.1",
+    "aws-sdk-client-mock-jest": "^3.0.1",
+    "esbuild": "^0.20.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-node": "^0.3.7",
-    "eslint-import-resolver-typescript": "^3.5.3",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-import-resolver-node": "^0.3.9",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^8.0.0",
-    "jest": "^29.3.1",
-    "jest-junit": "^15.0.0",
+    "husky": "^9.0.6",
+    "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "json-schema": "^0.4.0",
     "lint-staged": "^14.0.1",
     "prettier": "^3.2.5",
-    "ts-jest": "^29.0.5",
-    "ts-node": "^10",
-    "typescript": "^4.9.4",
-    "aws-sdk-client-mock": "^3.0.1",
-    "aws-sdk-client-mock-jest": "^3.0.1"
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "lint-staged": {
     "*.{ts,tsx,js}": "yarn lint",
@@ -41,13 +45,12 @@
   },
   "dependencies": {
     "@aws-cdk/aws-lambda-python-alpha": "^2.66.1-alpha.0",
-    "@aws-sdk/client-cloudwatch": "^3.490.0",
-    "@aws-sdk/client-eventbridge": "^3.490.0",
-    "@aws-sdk/client-organizations": "^3.490.0",
-    "@aws-sdk/client-ses": "^3.490.0",
-    "@aws-sdk/client-sns": "^3.490.0",
-    "@aws-sdk/client-ssm": "^3.490.0",
-    "@types/aws-lambda": "^8.10.109",
+    "@aws-sdk/client-cloudwatch": "3.525.0",
+    "@aws-sdk/client-eventbridge": "3.525.0",
+    "@aws-sdk/client-organizations": "3.525.0",
+    "@aws-sdk/client-ses": "3.525.0",
+    "@aws-sdk/client-sns": "3.525.0",
+    "@aws-sdk/client-ssm": "3.525.0",
     "async-retry": "^1.3.3",
     "aws-cdk-lib": "^2.115.0",
     "axios": "^1.6.7",
