fix: catch errors when calling cfn signal url

--- a/.github/workflows/automated-acceptance-tests.yml
+++ b/.github/workflows/automated-acceptance-tests.yml
@@ -96,7 +96,7 @@ jobs:
           CHANGE_SET_IDS=$(aws cloudformation list-change-sets --stack-name superwerker --query 'Summaries[?starts_with(ChangeSetName, `awscli-cloudformation-`)].ChangeSetId' --output text --no-cli-pager)
           for CHANGE_SET_ID in $CHANGE_SET_IDS
           do
-            echo "Change Set is already existing. Assuming it was not executed by previous step."
+            echo "Change Set is already existing. Assuming it was not executed by previous step. Executing..."
             aws cloudformation  wait change-set-create-complete --change-set-name ${CHANGE_SET_ID}
             aws cloudformation execute-change-set --change-set-name ${CHANGE_SET_ID} --disable-rollback
           done
