--- a/cdk/package.json
+++ b/cdk/package.json
@@ -48,6 +48,7 @@
     "@aws-sdk/client-cloudwatch": "3.525.0",
     "@aws-sdk/client-eventbridge": "3.525.0",
     "@aws-sdk/client-organizations": "3.525.0",
+    "@aws-sdk/client-securityhub": "^3.536.0",
     "@aws-sdk/client-ses": "3.525.0",
     "@aws-sdk/client-sns": "3.525.0",
     "@aws-sdk/client-ssm": "3.525.0",
@@ -57,6 +58,7 @@
     "cdk-assets": "^2.115.0",
     "constructs": "^10.1.224",
     "endent": "^2.1.0",
+    "exponential-backoff": "^3.1.1",
     "handlebars": "^4.7.8",
     "uuid4": "^2.0.3",
     "yaml": "^2.4.1"
