--- a/cdk/package.json
+++ b/cdk/package.json
@@ -52,8 +52,8 @@
     "@aws-sdk/client-ses": "3.525.0",
     "@aws-sdk/client-sns": "3.525.0",
     "@aws-sdk/client-ssm": "3.525.0",
-    "@aws-sdk/client-sts": "^3.535.0",
-    "@aws-sdk/credential-provider-node": "^3.535.0",
+    "@aws-sdk/client-sts": "3.525.0",
+    "@aws-sdk/credential-provider-node": "3.525.0",
     "async-retry": "^1.3.3",
     "aws-cdk-lib": "^2.115.0",
     "axios": "^1.6.7",
