--- a/cdk/package.json
+++ b/cdk/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@aws-cdk/aws-lambda-python-alpha": "^2.66.1-alpha.0",
     "@aws-sdk/client-cloudwatch": "3.540.0",
+    "@aws-sdk/client-controltower": "3.540.0",
     "@aws-sdk/client-eventbridge": "3.540.0",
     "@aws-sdk/client-organizations": "3.540.0",
     "@aws-sdk/client-securityhub": "3.540.0",
